<resources>
    <string name="app_name">proyectoFinalDeMayo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SoundVibe</string>
    <string name="nav_header_subtitle">SoundVibe@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorito">Favorito</string>
    <string name="menu_add">Agregar Favoritos</string>
    <string name="menu_delete">Eliminar Favoritos</string>
</resources>