<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mavericklovy.proyectofinaldemayo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mavericklovy.proyectofinaldemayo.ui.Add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mavericklovy.proyectofinaldemayo.ui.Delete.DeleteFragment"
        android:label="@string/menu_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/favoriteSongsFragment"
        android:name="com.mavericklovy.proyectofinaldemayo.ui.songs.SongsFragment"
        android:label="fragment_favorite_songs"
        tools:layout="@layout/fragment_songs" />
</navigation>